kotlin/semlang-parser/src/test/semlang/validatorTests/fail/dataType2.sem
// Data.equals requires the parameter type passed in to be of type class Data
function dataEqualsWrapper<T>(): (T, T) -> Boolean {
  // Named function binding
  Data.equals<T>|(_, _)
}
